@@ -7,6 +7,8 @@ breezy-debian (2.8.27) UNRELEASED; urgency=medium
     uscan.
   * Support date-only git snapshot versions.
   * By default, don't create a pristine-tar branch if one doesn't exist.
+  * Be a bit quieter when adding pristine-tar metadata in git
+    repositories.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 06 Mar 2019 21:35:13 +0000
 
